<resources>
    <string-array name="app_main_pages">
        <item>Feed</item>
        <item>Criar Post</item>
        <item>Calendário</item>
        <item>Cardápio RU</item>
        <item>Info RU</item>
    </string-array>
    <string-array name="ru_info_list">
        <item>Horário de Funcionamento</item>
        <item>Preços</item>
    </string-array>
    <string name="action_websearch">Web Search</string>
    <string name="drawer_open">Abre navigation drawer</string>
    <string name="drawer_close">Fecha navigation drawer</string>
    <string name="app_name">AppDCE</string>
    <string name="title_app_main">App DCE</string>
    <string name="title_cardapio">Cardápio</string>
    <string name="ru_menu">Cardápios</string>
    <string name="open_feed">Abrir Feed</string>
    <string name="ru_breakfast">Café da Manhã</string>
    <string name="ru_lunch">Almoço</string>
    <string name="ru_dinner">Jantar</string>
    <string-array name="days_of_week">
        <item>Domingo</item>
        <item>Segunda-Feira</item>
        <item>Terça-Feira</item>
        <item>Quarta-Feira</item>
        <item>Quinta-Feira</item>
        <item>Sexta-Feira</item>
        <item>Sábado</item>
    </string-array>
    <string-array name="times_of_day">
        <item>Café da Manhã</item>
        <item>Almoço</item>
        <item>Jantar</item>
    </string-array>
    <string name="week_day_name1">Domingo</string>
    <string name="week_day_name2">Segunda-Feira</string>
    <string name="week_day_name3">Terça-Feira</string>
    <string name="week_day_name4">Quarta-Feira</string>
    <string name="week_day_name5">Quinta-Feira</string>
    <string name="week_day_name6">Sexta-Feira</string>
    <string name="week_day_name7">Sábado</string>
    <string name="create_post">Criar Post</string>
    <string name="novo_post">Novo Post</string>
    <string name="title">Título</string>
    <string name="conteudo">Conteúdo</string>
    <string name="tags">Tags</string>
    <string name="referencia_outro_post">Referencia outro post</string>
    <string name="event_box">É um evento</string>
    <string name="event_date_beg_hint">Data do início do evento</string>
    <string name="event_time_beg_hint">Horário do início do evento</string>
    <string name="event_date_end_hint">Data do final do evento</string>
    <string name="event_time_end_hint">Horário do final do evento</string>
    <string name="post_referencia">Post Referência</string>
    <string name="salvar">Salvar</string>
    <string name="criar">Criar</string>
    <string name="post_created">Post Criado</string>
    <string name="open_post_label">Post</string>
    <string name="author_image_description">Imagem do autor</string>
    <string name="feed_label">Feed</string>
    <string name="mandatory_field_missing">Campo Obrigatório em Branco</string>
    <string name="tags_string">Tags: </string>

    <string name="ru_source">Todas as informações dessa seção foram retiradas do
        "http://www.pra.ufpr.br/portal/ru"</string>
    <string name="business_hours">Horário de Funcionamento</string>
    <string name="prices">Preços</string>
    <string name="ru_event_explanation">(*) Eventos institucionais, de interesse acadêmico da UFPR,
        planejados com antecedência mínima de 60 (sessenta) dias.</string>
    <string name="central_ru">RU Central</string>
    <string-array name="central_ru_business_hours1">
        <item>Segunda à Sexta</item>
        <item>Abre</item>
        <item>Fecha</item>
        <item>Café da Manhã</item>
        <item>06:45</item>
        <item>08:00</item>
        <item>Almoço</item>
        <item>11:00</item>
        <item>13:30</item>
        <item>Jantar</item>
        <item>17:30</item>
        <item>19:30</item>
    </string-array>
    <string-array name="central_ru_business_hours2">
        <item>Sábado</item>
        <item>Abre</item>
        <item>Fecha</item>
        <item>Café da Manhã</item>
        <item>07:30</item>
        <item>08:30</item>
        <item>Almoço</item>
        <item>11:30</item>
        <item>13:15</item>
        <item>Jantar</item>
        <item>17:45</item>
        <item>19:30</item>
    </string-array>
    <string-array name="central_ru_business_hours3">
        <item>Domingo e Feriado</item>
        <item>Abre</item>
        <item>Fecha</item>
        <item>Café da Manhã</item>
        <item>08:30</item>
        <item>09:30</item>
        <item>Almoço</item>
        <item>11:30</item>
        <item>13:00</item>
        <item>Jantar</item>
        <item>17:45</item>
        <item>19:00</item>
    </string-array>

    <string name="poli_ru">RU Centro Politécnico</string>
    <string-array name="poli_ru_business_hours1">
        <item>Segunda à Sexta</item>
        <item>Abre</item>
        <item>Fecha</item>
        <item>Café da Manhã</item>
        <item>06:45</item>
        <item>08:00</item>
        <item>Almoço</item>
        <item>11:00</item>
        <item>13:30</item>
        <item>Jantar</item>
        <item>17:30</item>
        <item>19:30</item>
    </string-array>

    <string name="agrarias_ru">RU Agrárias</string>
    <string-array name="agrarias_ru_business_hours1">
        <item>Segunda à Sexta</item>
        <item>Abre</item>
        <item>Fecha</item>
        <item>Café da Manhã</item>
        <item>06:45</item>
        <item>08:00</item>
        <item>Almoço</item>
        <item>11:30</item>
        <item>13:00</item>
    </string-array>

    <string name="botanico_ru">RU Jardim Botânico</string>
    <string-array name="botanico_ru_business_hours1">
        <item>Segunda à Sexta</item>
        <item>Abre</item>
        <item>Fecha</item>
        <item>Café da Manhã</item>
        <item>06:45</item>
        <item>08:00</item>
        <item>Almoço</item>
        <item>11:00</item>
        <item>13:30</item>
        <item>Jantar</item>
        <item>17:30</item>
        <item>19:30</item>
    </string-array>

    <string-array name="breakfast_prices">
        <item>Café da Manhã</item>
        <item> </item>
        <item>Estudantes da UFPR (todas as categorias com registro acadêmico vigente)</item>
        <item>R$ 0,50</item>
        <item>Servidores UFPR (técnicos e docentes) e Vinculados</item>
        <item>R$ 3,50</item>
        <item>Eventos (*)</item>
        <item>R$ 3,50</item>
        <item>Visitantes</item>
        <item>R$ 5,00</item>
        <item>Bolsistas PROBEM, AUGM, FUNAI, Residentes (Medicina e Medicina Veterinária)</item>
        <item>R$ 0,00</item>
    </string-array>

    <string-array name="lunch_dinner_prices">
        <item>Almoço e Jantar</item>
        <item> </item>
        <item>Estudantes da UFPR (todas as categorias com registro acadêmico vigente)</item>
        <item>R$ 1,30</item>
        <item>Servidores UFPR (técnicos e docentes) e Vinculados</item>
        <item>R$ 6,00</item>
        <item>Eventos (*)</item>
        <item>R$ 6,00</item>
        <item>Visitantes</item>
        <item>R$ 10,00</item>
        <item>Bolsistas PROBEM, AUGM, FUNAI, Residentes (Medicina e Medicina Veterinária)</item>
        <item>R$ 0,00</item>
    </string-array>

</resources>
