<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:text="@string/novo_post"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:id="@+id/inputTitle"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referencia_outro_post"
            android:onClick="referenceToAPost"/>

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/post_referencia"
            android:id="@+id/post_referencia"
            android:visibility="gone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/conteudo"
            android:id="@+id/inputText"
            android:gravity="bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tags"
            android:id="@+id/inputTags"
            android:gravity="bottom"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/criar"
            android:id="@+id/btnCreatePost"
            android:layout_gravity="end"
            android:layout_margin="10sp"/>

    </LinearLayout>
</ScrollView>