<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_ru_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ru_menu"
        android:textSize="20sp"
        android:background="@color/colorGrey1"
        android:gravity="center"
        android:onClick="OpenTodaysMenu"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/open_feed"
        android:textSize="20sp"
        android:background="@color/colorGrey2"
        android:gravity="center"
        android:onClick="OpenFeed"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/create_post"
        android:textSize="20sp"
        android:background="@color/colorGrey1"
        android:gravity="center"
        android:onClick="OpenCreatePost"/>

</LinearLayout>