<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:id="@+id/vScroll"
    android:background="@color/colorBlackGrey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_menu">

    <HorizontalScrollView
        android:id="@+id/hScroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/weekDaysView"
                android:layout_width="2000dp"
                android:layout_height="60dp"
                android:layout_marginBottom="2sp"
                android:orientation="horizontal"
                android:weightSum="22"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="1sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginBottom="1sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/breakfastView"
                android:layout_width="2000dp"
                android:layout_height="80dp"
                android:layout_marginTop="2sp"
                android:layout_marginBottom="2sp"
                android:orientation="horizontal"
                android:weightSum="22">

                <TextView
                    android:id="@+id/breakfastTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="1sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginBottom="1sp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/ru_breakfast"
                    android:background="@color/colorGrey3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lunchView"
                android:layout_width="2000dp"
                android:layout_height="160dp"
                android:layout_marginTop="2sp"
                android:layout_marginBottom="2sp"
                android:orientation="horizontal"
                android:weightSum="22">

                <TextView
                    android:id="@+id/lunchTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="1sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginBottom="1sp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/ru_lunch"
                    android:background="@color/colorGrey3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dinnerView"
                android:layout_width="2000dp"
                android:layout_height="160dp"
                android:layout_marginTop="2sp"
                android:orientation="horizontal"
                android:weightSum="22">

                <TextView
                    android:id="@+id/dinnerTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="1sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginBottom="1sp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/ru_dinner"
                    android:background="@color/colorGrey3" />

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>